examples/test/testpolicy13216.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13216
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key46: value34
      key41: value17
      key33: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value7
          key46: value12
      podSelector:
        matchLabels:
          key32: value0
          key13: value4
          key12: value20
